--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
+    "framer-motion": "^6.3.0",
     "react": "^18.0.0",
     "react-cool-img": "^1.2.12",
     "react-dom": "^18.0.0",
